# SSCore

./: CMakeLists.txt
SSCode/: CMakeLists.txt  SSIdentifier.hpp
SSTest/: CMakeLists.txt
